:lipstick: 기억력 테스트 게임 메뉴 추가

--- a/css/index.css
+++ b/css/index.css
@@ -128,8 +128,8 @@
     background-image: url('./../img/index/card-matching.png');
 }
 
-.preparing .game__image:after {
-    background-image: url('./../img/index/question.png');
+#memory-test .game__image:after {
+    background-image: url('./../img/index/memory-test.png');
 }
 
 .game__title {
