:adhesive_bandage: 클래스명, 주석 맞춤법 등 수정

--- a/css/common/styles.css
+++ b/css/common/styles.css
@@ -113,8 +113,8 @@ img {
     color: #76BA99;
 }
 
-.select {
-    animation: selectionEffect 400ms 2 alternate;
+.bgChange {
+    animation: bgChangeEffect 400ms 2 alternate;
 }
 
 .blink {
@@ -125,7 +125,7 @@ img {
     animation: vibrationEffect 100ms infinite;
 }
 
-@keyframes selectionEffect {
+@keyframes bgChangeEffect {
     from {
         background-color: #FFF;
     }
