--- a/css/game-mt.css
+++ b/css/game-mt.css
@@ -94,7 +94,7 @@
     padding-bottom: 100%;
 }
 
-.game__board {
+.item-wrapper {
     position: relative;
     display: flex;
     flex-wrap: wrap;
